k8s_on_AWS_EKS/my_work/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-info
  namespace: development
  labels:
    app: pod-info
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pod-info
  template:
    metadata:
      labels:
        app: pod-info
    spec:
      containers:
      - name: pod-info
        image: nginx:1.25.5
        ports:
        - containerPort: 80
