k8s_on_AWS_EKS/my_work/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pod-service
  namespace: development
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: pod-info
